# server/routes/arenas.ts
@@ -4,12 +4,14 @@ import { getArenas } from "../controllers/arenas";
 import { compareArenas } from "../controllers/compareArenas";
 import { getIdeasOfArena } from "../controllers/arenaIdeas";
 import { getArenaWinRateTrends } from "../controllers/arenaWinRateTrends";
+import { getSimilarArenas } from "../controllers/similarArenas";
 
 const router = Router();
 
 // Arenas
 router.get("/:companyId/arenas", getArenas);
 router.get("/:companyId/compare", compareArenas);
+router.get("/:companyId/:arenaId/similar_arenas", getSimilarArenas);
 router.get("/:companyId/:id", getById);
 router.get("/:companyId/:arenaId/ideas", getIdeasOfArena);
 router.get("/:companyId/:arenaId/win_rate/trends", getArenaWinRateTrends);
